--- a/_data/blog.yml
+++ b/_data/blog.yml
@@ -3,24 +3,25 @@
   href: /blog/
 
 # edit following lines to custom your blog page, make sure name is the same as href but capitalized first letter(except HTML)
-- name: Python
-  href: /python/
 
-- name: Linux
+- name: GNU/Linux
   href: /linux/
 
-- name: HTML
-  href: /html/
+- name: C/C++
+  href: /CCpp/
 
-- name: Database
-  href: /database/
+- name: Embedded
+  href: /embedded/
 
-- name: Mac
-  href: /mac/
+- name: Go
+  href: /go/
 
-- name: Life
-  href: /life/
+- name: Mobile
+  href: /mobile/
 
 # Don't display donation page: change donation to off at file '_config.yml'
-- name: Donate
-  href: /donate/
+- name: Web
+  href: /web/
+
+- name: Python
+  href: /python/
