--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -2,5 +2,5 @@
 
 label: Ability
 id : cs
-aspects: GitHub, Motivation, HTML5, ReactJS, Machine Learing, Python, Sleeping
-percentage: 100, 35, 65, 80, 70, 90, 50
+aspects: C/C++, Go, Python, GNU/Linux, Docker, Haskell, Kotlin
+percentage: 100, 70, 90, 90, 90, 80, 80
