--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -2,5 +2,5 @@
 
 label: Ability
 id : cs
-aspects: C/C++, Go, Python, GNU/Linux, Docker, Haskell, Kotlin
-percentage: 100, 70, 90, 90, 90, 80, 80
+aspects: C/C++, GNU/Linux, Go, Python, Docker, Haskell, Kotlin, Team work, Project Management
+percentage: 100, 90, 70, 90, 90, 80, 80, 100, 80
