--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 title: Simon RACAUD
 description: RACAUD Simon's portfolio
 keywords: blog,github,gh-pages,portfolio,simon,racaud
-baseurl: /home
-#baseurl: / # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
-#url: https://simonracaud.github.io/  # url should be 'http://<github_username>.github.io/homepage' as before
-url: http://127.0.0.1:4000/home
+#baseurl: /home
+baseurl: / # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
+url: https://simonracaud.github.io/  # url should be 'http://<github_username>.github.io/homepage' as before
+# url: http://127.0.0.1:4000/home
 img_path: /static/assets/img/blog  # url should be '/homepage/static/assets/img/blog' as before
 
 # author -- index page "about me" section
